[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "libsDarwin"
version = "0.0.1"
authors = []
description = "https://code.ill.fr/scientific-software/crysfml/-/jobs/40800/artifacts/download"
packages = [ { include = "libsDarwin" } ]

[tool.poetry.dependencies]
python = "^3.7, <3.8"
