[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "libsDarwin"
version = "0.0.1"
authors = []
readme = 'README.md'
description = "Calculation engine libraries: CFML, GSAS-II"
packages = [ { include = "libsDarwin" } ]

[tool.poetry.dependencies]
python = "^3.7, <3.8"
